--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,9 @@
 /* estilos*/
+.footer {
+    background-color: #222;
+    color: white;
+    padding: 2rem 0;
+    margin-top: 2rem;
+    text-align: center;
+
+}
